Allow for image background colors.

--- a/src/styles/core/colors/_light.scss
+++ b/src/styles/core/colors/_light.scss
@@ -96,6 +96,7 @@
   --color-grid: var(--color-fill-gray);
   --color-header-text: var(--color-figure-gray);
   --color-hero-eyebrow: #{dark-color(figure-gray-secondary)};
+  --color-image-background: transparent;
   --color-link: var(--color-figure-blue);
   --color-loading-placeholder-background: var(--color-fill);
   --color-nav-color: #{light-color(figure-gray-secondary-alt)};
